Update version to 2.0.1
Various pom.xml files were updated to change the version from 2.0 to 2.0.1. The Version.java and version.properties file were also updated to reflect the new version and handle version prefixes/postfixes. This version update extends to all the submodules of BeanMaker V2 project.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,8 +1,13 @@
 Release Notes for Beanmaker CLI
 -------------------------------
 
-v2.0 (2024-02-07)
+v2.0 (2024-07-02)
 
 - move from 1.0-SNAPSHOT to an actual version number
 - the libraries are deployed on so many projects now that they cannot be considered alpha or beta anymore, plus we
   need versioning for projects that are moving at different speeds
+
+V2.0.1 (2024-07-23)
+
+- add removeFileExtension() to Files class
+- update Version management
