--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -50,3 +50,22 @@ V2.3 (TBD)
 INCOMPATIBLES CHANGES:
 - leaked FileItem from HttpRequestParameters has been removed and replaced by inner class UploadedFile (code for
   beans containing DbBeanFile-s needs to regenerated)
+- field validation has been revamped with:
+    - introduction of FieldValidationFunction class to replace complex generic arguments used in lists of validation
+      functions
+    - introduction of a warning level in bean validation logic;
+    - validation checking functions have been renamed to distinguish warnings, errors that should short circuit the
+      validation logic and error that should be reported while letting the validation process continue
+- introduce the notion of region to DbBeanLanguage for finer localisation (ex. en-US vs en)
+- add support for a hierarchy of languages in multilingual projects, where label value for a language+region,
+  if they are not directly available, can be retrieved from the raw language labels and then, if still unavailable,
+  from the default language
+
+NEW FEATURES:
+- add two separate annotations to distinguish generated files that can be edited from those that should not be (replace
+  use of javax.annotation.processing.Generated)
+
+BUG FIXES AND MINOR CHANGES:
+- code cleanup in master tables
+- improve some exception messages
+- various small improvements and fixes
