Add support for detail links in BaseMasterTableView
Extended functionality to include "detail" links alongside "edit" and "delete" links in table views. Added new properties, methods, and conditions to handle detail icons, tooltips, and URLs. This enhancement enables simple navigation to detailed views from table items.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -74,6 +74,8 @@ NEW FEATURES:
   buttons in another (this to help take advantage of CSS frameworks that offer facilites to separate body and
   footer in modales)
 - introduce Bootstrap 5 HtmlFormHelper
+- introduce direct support in BeanMasterTableViewBase for links to a detail view: removes the need for repetitive
+  overloading of the getEditCell() function
 
 BUG FIXES:
 - bug fix for: drag and drop doesn't work for tables with an item_order linked to an other field
