Update RELEASE_NOTES.txt to keep it current with recently added features

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -64,6 +64,9 @@ INCOMPATIBLES CHANGES:
 - add support in BeanParametersBase to record database tables where the bean is referenced and to check the presence
   of such references; this is used in the context of the implementation of the okToDelete() function in master tables;
   because of this all BeanMasterTableViewBase source files need to be regenerated
+- by default error message container IDs are now of the form: error_message_<Bean name>_<Bean ID>; this guarantee the
+  uniqueness of these ids when creating complex interfaces; existing code might need to be changed if it relies
+  on default generation of error message container
 
 All generated code from version 2.2 must be regenerated. In editable files, overloaded functions related to file
 handling, data validation and naming and ordering beans should be checked.
