Add DbBeanHtmlSelector class for generating HTML selects
Introduced DbBeanHtmlSelector in the runtime to simplify generating HTML select elements from a list of beans. This includes features like sorting, setting selected options, and support for optional no-selection labels or text. Updated RELEASE_NOTES.txt to reflect this addition.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -95,6 +95,7 @@ NEW FEATURES:
   corresponding value when the web form is request; this should help a lot when extra information is required
   to initialize a new record/bean
 - add function to check if a label is unique in context (specific table field)
+- add DbBeanHtmlSelector class to runtime as an helper class to generate HTML selects from a list of beans
 
 BUG FIXES:
 - bug fix for: drag and drop doesn't work for tables with an item_order linked to an other field
