feat: add new instance creation methods in DbBeanLocalization
Introduce `newInstanceWithPrefix`, `newInstanceWithBeanClassName`, and a generic `newInstance` method in `DbBeanLocalization` to simplify object creation with optional prefix or class name customization. Update `dbBeanLocalization` in `BaseView` to be non-final, allowing reassignment.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -104,6 +104,8 @@ NEW FEATURES:
 - add DbBeanHtmlSelector class to runtime as an helper class to generate HTML selects from a list of beans
 - enhance robustness of CSV parsing classes and functions and avoids unnecessary exceptions when fields are empty
 - function to generate codes from label content ("My Data" -> my_data)
+- DbBeanLocalization in views (most important for master tables) is no longer final and can now be reassigned
+  in super classes
 
 BUG FIXES:
 - bug fix for: drag and drop doesn't work for tables with an item_order linked to an other field
